# langs-and-graphs

./: pyproject.toml
agents/: 1-simple_llm_bot.py  2-agent_with_memory.py  3-simple_react_agent.py  4-drafter_agent.py  5-simple_rag_agent.py  Holiday Request - Heavy Rainfall.txt  chroma.sqlite3
graphs/: 1-hello_world_graph.ipynb  2-exercise.ipynb  3-multi_input_graph.ipynb  4-exercise.ipynb  5-multi_node copy.ipynb  6-exercise.ipynb  7-conditional_edges.ipynb  8-looping_graphs.ipynb  9-exercise.ipynb
