[project]
name = "learning-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.1",
    "ipython>=8.37.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "pypdf>=6.1.3",
    "python-dotenv>=1.1.1",
]
